--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(COMPONENT_SRCS 	"key_config.c")
+set(COMPONENT_SRCS key_config.c)
 set(COMPONENT_ADD_INCLUDEDIRS "./include")
 set(COMPONENT_REQUIRES spiffs)
 register_component()
