--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(COMPONENT_SRCS key_config.c)
+set(COMPONENT_SRCDIRS ".")
 set(COMPONENT_ADD_INCLUDEDIRS "./include")
-set(COMPONENT_REQUIRES spiffs)
+set(COMPONENT_PRIV_REQUIRES "spiffs")
 register_component()
